# scrun

./: .gitignore  Cargo.toml  README.md
src/: buffer.rs  cursor.rs  main.rs  view.rs
src/view/: editor_view.rs
