[package]
name = "scrun"
description = "An experiment in writing a text editor for fun and education."
version = "0.1.0"
authors = ["Severen Redwood <severen@shrike.me>"]
license = "MPL-2.0"

edition = "2018"

publish = false

[dependencies]
clap = { version = "4.0.18", features = ["derive", "unicode", "wrap_help"] }
cursive = { version = "0.20.0", default-features = false, features = ["ncurses-backend"] }
derive_more = "0.99.17"
ropey = "1.5.0"

[profile.release]
lto = "thin"
